--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,17 @@ environment:
   sdk: '>=2.5.0-dev <3.0.0'
 
 dependencies:
-  path: '>=1.6.1 <3.0.0'
-  collection: '>=1.14.10 <3.0.0'
-  io: '>=0.3.0 <2.0.0'
-  yaml: '>=2.0.0 <4.0.0'
-  meta: '>=1.1.0 <3.0.0'
-  args: '>=1.5.0 <3.0.0'
-  pub_semver: '>=1.4.0 <3.0.0'
+  path: '>=1.6.1 <3.0.0' # dart.dev
+  collection: '>=1.14.10 <3.0.0' # dart.dev
+  io: '>=0.3.0 <2.0.0' # dart.dev
+  yaml: '>=2.0.0 <4.0.0' # dart.dev
+  meta: '>=1.1.0 <3.0.0' # dart.dev
+  args: '>=1.5.0 <3.0.0' # dart.dev
+  pub_semver: '>=1.4.0 <3.0.0' # dart.dev
 
 dev_dependencies:
-  pedantic: '>=1.4.0'
-  test: '>=1.2.0'
-  async: any
-  build_runner: '>=0.9.0'
-  build_test: '>=0.10.2'
+  pedantic: '>=1.4.0' # dart.dev
+  test: '>=1.2.0' # dart.dev
+  async: any # dart.dev
+  build_runner: '>=0.9.0' # dart.dev
+  build_test: '>=0.10.2' # dart.dev
